// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Line.svelte > When rtl is true property > should render when type is "child" 1`] = `
<div>
  <tree-line
    class="grid h-full w-4 min-w-4 grid-cols-2 grid-rows-2"
    data-tree-line="true"
    data-tree-line-type="child"
  >
    <!---->
    <i
      class="row-span-2 grid grid-rows-2 border-r"
    >
      <i
        class="border-b"
      />
    </i>
    
    <!---->
  </tree-line>
  
</div>
`;

exports[`Line.svelte > When rtl is true property > should render when type is "empty" 1`] = `
<div>
  <tree-line
    class="grid h-full w-4 min-w-4 grid-cols-2 grid-rows-2"
    data-tree-line="true"
    data-tree-line-type="empty"
  >
    <!---->
  </tree-line>
  
</div>
`;

exports[`Line.svelte > When rtl is true property > should render when type is "last" 1`] = `
<div>
  <tree-line
    class="grid h-full w-4 min-w-4 grid-cols-2 grid-rows-2"
    data-tree-line="true"
    data-tree-line-type="last"
  >
    <!---->
    <i
      class="border-b border-r"
    />
    
    <!---->
  </tree-line>
  
</div>
`;

exports[`Line.svelte > When rtl is true property > should render when type is "sibling" 1`] = `
<div>
  <tree-line
    class="grid h-full w-4 min-w-4 grid-cols-2 grid-rows-2"
    data-tree-line="true"
    data-tree-line-type="sibling"
  >
    <i
      class="row-span-2 border-r"
    />
    <!---->
  </tree-line>
  
</div>
`;

exports[`Line.svelte > given a type > when type is "child" > then it should render the correct elements 1`] = `
<div>
  <tree-line
    class="grid h-full w-4 min-w-4 grid-cols-2 grid-rows-2"
    data-tree-line="true"
    data-tree-line-type="child"
  >
    <!---->
    <i
      class="col-span-1 row-span-2 border-r"
    />
     
    <i
      class="border-b"
    />
    
    <!---->
  </tree-line>
  
</div>
`;

exports[`Line.svelte > given a type > when type is "empty" > then it should render the correct elements 1`] = `
<div>
  <tree-line
    class="grid h-full w-4 min-w-4 grid-cols-2 grid-rows-2"
    data-tree-line="true"
    data-tree-line-type="empty"
  >
    <!---->
  </tree-line>
  
</div>
`;

exports[`Line.svelte > given a type > when type is "last" > then it should render the correct elements 1`] = `
<div>
  <tree-line
    class="grid h-full w-4 min-w-4 grid-cols-2 grid-rows-2"
    data-tree-line="true"
    data-tree-line-type="last"
  >
    <!---->
    <i
      class="border-r"
    />
     
    <i
      class="border-b"
    />
    
    <!---->
  </tree-line>
  
</div>
`;

exports[`Line.svelte > given a type > when type is "sibling" > then it should render the correct elements 1`] = `
<div>
  <tree-line
    class="grid h-full w-4 min-w-4 grid-cols-2 grid-rows-2"
    data-tree-line="true"
    data-tree-line-type="sibling"
  >
    <i
      class="row-span-2 border-r"
    />
    <!---->
  </tree-line>
  
</div>
`;
